--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,12 +1,12 @@
 server {
     listen 80;
-    server_name sdf.min1870.com;
+    server_name sdfpos.min1870.com;
     return 301 https://$server_name$request_uri;
 }
 server {
         
     location / {
-        proxy_pass http://drf:8000;
+        proxy_pass http://localhost:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -14,8 +14,8 @@ server {
     }
 
     listen 443 ssl;
-    server_name sdf.min1870.com;
-    ssl_certificate /etc/letsencrypt/live/sdf.min1870.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/sdf.min1870.com/privkey.pem;
+    server_name sdfpos.min1870.com;
+    ssl_certificate /etc/letsencrypt/live/sdfpos.min1870.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/sdfpos.min1870.com/privkey.pem;
 
 }
